--- a/templates/justmovies/index.html
+++ b/templates/justmovies/index.html
@@ -31,14 +31,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="40"></a>
+            <a class="navbar-brand" href="index.html">
+              <img src="{% static "logo.svg" %}" height="40">
+            </a>
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a class="nav-link" href="getting-started.html">Getting Started</a></li>
-              <li><a class="nav-link" href="documentation.html">Documentation</a></li>
-              <li><a class="nav-link" href="free-psd.html">Free PSD</a></li>
-              <li><a class="nav-link" href="color-picker.html">Color Picker</a></li>
+              <li><a class="nav-link" href="{% url 'home' %}">Movies</a></li>
+              <li><a class="nav-link" href="{% url 'people' %}">People</a></li>
+              <li><a class="nav-link" href="{% url 'data' %}">Data</a></li>
             </ul>
           </div>
         </div>
@@ -62,7 +63,7 @@
                 </div>
                 <div class="text-center">
                   <a href="https://www.imdb.com/title/{{movie.imdb_id}}" 
-                     class="btn btn-default flat" role="button">IMDB</a>
+                     class="btn btn-default flat" role="button" target="_blank">IMDB</a>
                   <a href="#" class="btn btn-warning flat" role="button">Edit</a>
                 </div>
               </div>
@@ -73,10 +74,14 @@
       <!--footer-->
       <div class="site-footer">
         <div class="container">
-          <hr class="dashed" />
           <div class="copyright clearfix">
-          <p><b>Bootflat</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="getting-started.html">Getting Started</a>&nbsp;&bull;&nbsp;<a href="documentation.html">Documentation</a>&nbsp;&bull;&nbsp;<a href="free-psd.html">Free PSD</a>&nbsp;&bull;&nbsp;<a href="color-picker.html">Color Picker</a></p>
-            <p>&copy; 2014 <a href="http://www.flathemes.com" target="_blank">FLATHEMES</a>, Inc. All rights reserved. &nbsp;&nbsp;Code licensed under <a href="http://opensource.org/licenses/mit-license.html" target="_blank" rel="external nofollow">MIT License</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/" rel="external nofollow">CC BY 3.0</a>.</p>
+          <p>
+            <b>Just Movies.</b>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="{% url 'home' %}">Movies</a>&nbsp;&bull;&nbsp;
+            <a href="{% url 'people' %}">People</a>&nbsp;&bull;&nbsp;
+            <a href="{% url 'data' %}">Data</a>
+          </p>
+            <p>A Database Systems (TAMU CSCE 608) course project developed by Shashwat Shashi Mehta. UIN: <b>827008698</b></p>
           </div>
         </div>
       </div>
