--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -59,3 +59,8 @@
 .flat {
     border-radius: 0 !important;
 }
+
+.pagination > .active > a {
+    background-color: #428bca;
+    border-color: #428bca;
+}
