--- a/templates/justmovies/index.html
+++ b/templates/justmovies/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a class="nav-link" href="{% url 'home' %}">Movies</a></li>
+              <li><a class="nav-link" href="{% url 'movies' %}">Movies</a></li>
               <li><a class="nav-link" href="{% url 'people' %}">People</a></li>
               <li><a class="nav-link" href="{% url 'data' %}">Data</a></li>
             </ul>
@@ -70,6 +70,19 @@
             </div>
           {% endfor %}
         </div>
+        <div class="row example-pagination">
+          <div class="col-md-12">
+            <ul class="pagination">
+              <li class="active flat"><a href="#">PREV</a></li>
+              <li><a href="#">1</a></li>
+              <li class="active"><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li class="disabled"><a href="#">5</a></li>
+              <li class="active flat"><a href="#">NEXT</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
       <!--footer-->
       <div class="site-footer">
@@ -77,7 +90,7 @@
           <div class="copyright clearfix">
           <p>
             <b>Just Movies.</b>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="{% url 'home' %}">Movies</a>&nbsp;&bull;&nbsp;
+            <a href="{% url 'movies' %}">Movies</a>&nbsp;&bull;&nbsp;
             <a href="{% url 'people' %}">People</a>&nbsp;&bull;&nbsp;
             <a href="{% url 'data' %}">Data</a>
           </p>
