Can filter movies on title and company name.

--- a/templates/justmovies/index.html
+++ b/templates/justmovies/index.html
@@ -71,15 +71,16 @@
           {% endfor %}
         </div>
         <div class="row example-pagination">
-          <div class="col-md-12">
+          <hr class="dashed"/>
+          <div class="text-right">
             <ul class="pagination">
-              <li class="active flat"><a href="#">PREV</a></li>
+              <li class="active"><a class="flat" href="#">PREV</a></li>
               <li><a href="#">1</a></li>
-              <li class="active"><a href="#">2</a></li>
+              <li class="active"><a  href="#">2</a></li>
               <li><a href="#">3</a></li>
               <li><a href="#">4</a></li>
               <li class="disabled"><a href="#">5</a></li>
-              <li class="active flat"><a href="#">NEXT</a></li>
+              <li class="active"><a class="flat" href="#">NEXT</a></li>
             </ul>
           </div>
         </div>
