--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -72,3 +72,28 @@
 .unresponsive {
     pointer-events: none;
 }
+
+.filter-bar {
+    display: flex;
+}
+
+.filter-bar label {
+    margin: 0 0 1px 2px;
+}
+
+.filter-bar .col {
+    padding: 0 7px;
+}
+
+.filter-bar button[type="submit"] {
+    width: 100%;
+}
+
+.panel-just-dashed .panel-heading {
+    border-bottom: 1px dotted #ddd;
+}
+
+.panel-just-dashed .panel-footer {
+    border-top: 1px dotted #ddd;
+    background: inherit;
+}
