--- a/templates/justmovies/index.html
+++ b/templates/justmovies/index.html
@@ -1,128 +1,150 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Just Movies</title>
     <!-- Sets initial viewport load and disables zooming  -->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="keywords" content="Just Movies, Movies, Actors, Directors, Ratings, Analytics">
-	  <meta name="description" content="Just Movies is just about movies. Our analytics may interest you.">
-    
-    <link rel="shortcut icon" type="image/png" href="{% static "favicon.png" %}"/>
-    
+    <meta name="description" content="Just Movies is just about movies. Our analytics may interest you.">
+    <link rel="shortcut icon" type="image/png" href="{% static " favicon.png" %}" />
     <!-- bootflat stuffs -->
     <link rel="stylesheet" href="{% static "bootflat/css/site.min.css" %}">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800,700,400italic,600italic,700italic,800italic,300italic" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="{% static "bootflat/js/site.min.js" %}"></script>
-
     <!-- just movies stuffs -->
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
-  </head>
-  <body class="home">
+</head>
+
+<body class="home">
     <div class="docs-header">
-      <!--nav-->
-      <nav class="navbar navbar-default navbar-custom" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html">
+        <!--nav-->
+        <nav class="navbar navbar-default navbar-custom" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html">
               <img src="{% static "logo.svg" %}" height="40">
             </a>
-          </div>
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a class="nav-link" href="{% url 'movies' %}">Movies</a></li>
-              <li><a class="nav-link" href="{% url 'people' %}">People</a></li>
-              <li><a class="nav-link" href="{% url 'data' %}">Data</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!--index-->
-      <div class="index">
-        <div class="container">
-          <h1>Just Movies, Simply.</h1>
-        </div>
-      </div>
-      <!-- Movies ================================================== -->
-      <div class="container example">
-        <h2 class="filters"><!-- Filters go here --></h2>
-        <div class="movies-container">
-          {% for movie in movies %}
-            <div class="movie">
-              <div class="thumbnail">
-                <img class="poster" src="{{movie.poster}}" >
-                <div class="caption text-center">
-                  <h3>{{movie.title}}</h3>
                 </div>
-                <div class="text-center">
-                  <a href="https://www.imdb.com/title/{{movie.imdb_id}}" 
-                     class="btn btn-default flat" role="button" target="_blank">IMDB</a>
-                  <a href="#" class="btn btn-warning flat" role="button">Edit</a>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a class="nav-link" href="{% url 'movies' %}">Movies</a></li>
+                        <li><a class="nav-link" href="{% url 'people' %}">People</a></li>
+                        <li><a class="nav-link" href="{% url 'data' %}">Data</a></li>
+                    </ul>
                 </div>
-              </div>
             </div>
-          {% endfor %}
-          {% if not movies|length %}
-            <h4 class="center">
-              No movies found matching applied filters.
-            </h4>
-          {% endif %}
-        </div>
-        <div class="row example-pagination">
-          <hr class="dashed"/>
-          {% if pagination.pages|length %}
-            <div class="text-right">
-              <ul class="pagination">
-                <li class=" 
-                {% if pagination.page_number == 1 %}
-                  unresponsive inactive
-                {% endif %}">
-                  <a class="flat" href="{% url 'movies' %}?page={{pagination.page_number|add:"-1"}}">PREV</a>
-                </li>
-                {% for page in pagination.pages %}
-                  <li class="
-                    {% if pagination.page_number == page %}
-                      active
-                    {% endif %}
-                    {% if page == '...' %}
-                      unresponsive inactive
-                    {% endif %}"">
-                    <a href="{% url 'movies' %}?page={{page}}">{{page}}</a>
-                  </li>
-                {% endfor %}
-                <li class="
-                {% if pagination.page_number == pagination.total_pages %}
-                  unresponsive inactive
-                {% endif %}">
-                  <a class="flat" href="{% url 'movies' %}?page={{pagination.page_number|add:"1"}}">NEXT</a>
-                </li>
-              </ul>
+        </nav>
+        <!--index-->
+        <div class="index">
+            <div class="container">
+                <h1>Just Movies, Simply.</h1>
             </div>
-          {% endif %}
         </div>
-      </div>
-      <!--footer-->
-      <div class="site-footer">
+        <!-- Movies ================================================== -->
         <div class="container">
-          <div class="copyright clearfix">
-          <p>
-            <b>Just Movies.</b>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="{% url 'movies' %}">Movies</a>&nbsp;&bull;&nbsp;
-            <a href="{% url 'people' %}">People</a>&nbsp;&bull;&nbsp;
-            <a href="{% url 'data' %}">Data</a>
-          </p>
-            <p>A Database Systems (TAMU CSCE 608) course project developed by Shashwat Shashi Mehta. UIN: <b>827008698</b></p>
-          </div>
+            <div class="panel panel-just-dashed">
+                <div class="panel-heading">
+                    <form action="/movies" method="get">
+                        <div class="filter-bar">
+                            <div class="col">
+                                <label>Title</label>
+                                <input type="text" class="form-control" name="title" 
+                                       placeholder="Movie Title" value="{{filters.title}}">
+                            </div>
+                            <div class="col">
+                                <label>Company</label>
+                                <input type="text" class="form-control" name="company" 
+                                       placeholder="Company Name" value="{{filters.company}}">
+                            </div>
+                            <div class="col" style="margin-left: auto;">
+                                <label>&nbsp;</label>
+                                <button type="submit" class="btn btn-primary">Search</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="panel-body">
+                    <div class="movies-container">
+                        {% for movie in movies %}
+                        <div class="movie">
+                            <div class="thumbnail">
+                                <img class="poster" src="{{movie.poster}}" >
+                                <div class="caption text-center">
+                                    <h3>{{movie.title}}</h3>
+                                </div>
+                                <div class="text-center">
+                                    <a href="https://www.imdb.com/title/{{movie.imdb_id}}"
+                                       class="btn btn-default flat" role="button" target="_blank">IMDB</a>
+                                    <a href="#" class="btn btn-warning flat" role="button">Edit</a>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                        {% if not movies|length %}
+                        <h4 class="center">
+                          No movies found matching applied filters.
+                        </h4>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    <div class="example-pagination">
+                        {% if pagination.pages|length %}
+                        <div class="text-right">
+                            <ul class="pagination">
+                                <li class=" 
+                                  {% if pagination.page_number == 1 %}
+                                    unresponsive inactive
+                                  {% endif %}">
+                                    <a class="flat" href="{% url 'movies' %}?page={{pagination.page_number|add:"-1"}}">PREV</a>
+                                </li>
+                                {% for page in pagination.pages %}
+                                <li class="
+                                  {% if pagination.page_number == page %}
+                                    active
+                                  {% endif %}
+                                  {% if page == '...' %}
+                                    unresponsive inactive
+                                  {% endif %}">
+                                    <a href="{% url 'movies' %}?page={{page}}">{{page}}</a>
+                                </li>
+                                {% endfor %}
+                                <li class="
+                                  {% if pagination.page_number == pagination.total_pages %}
+                                    unresponsive inactive
+                                  {% endif %}">
+                                    <a class="flat" href="{% url 'movies' %}?page={{pagination.page_number|add:"1"}}">NEXT</a>
+                                </li>
+                            </ul>
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+            <!--footer-->
+            <div class="site-footer">
+                <div class="container">
+                    <div class="copyright clearfix">
+                        <p>
+                            <b>Just Movies.</b>&nbsp;&nbsp;&nbsp;&nbsp;
+                            <a href="{% url 'movies' %}">Movies</a>&nbsp;&bull;&nbsp;
+                            <a href="{% url 'people' %}">People</a>&nbsp;&bull;&nbsp;
+                            <a href="{% url 'data' %}">Data</a>
+                        </p>
+                        <p>A Database Systems (TAMU CSCE 608) course project developed by Shashwat Shashi Mehta. UIN: <b>827008698</b></p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+</body>
 
-    </div>
-  </body>
 </html>
