More data for Wil Wheaton.

--- a/templates/justmovies/people.html
+++ b/templates/justmovies/people.html
@@ -74,8 +74,8 @@
                             <td>
                                 <img src="{{ image }}" alt="">
                             </td>
-                            <td style="padding: 0 20px;">
-                                <h3>{{ name }}</h3>
+                            <td style="padding: 0 20px; vertical-align: top;">
+                                <h3 style="margin-top: 0;">{{ name }}</h3>
                                 <p>Born: <b>{{ dob }}</b></p>
                                 <p>Roles: <b>{{ roles }}</b></p>
                                 <p>{{ intro | linebreaks }}</p>
@@ -83,7 +83,7 @@
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <table>
+                                <table style="margin-top: 20px;">
                                     <tr>
                                         <th>
                                             <u><b>Filmography</b></u>
