Changed page headers.

--- a/templates/justmovies/data.html
+++ b/templates/justmovies/data.html
@@ -50,7 +50,7 @@
         <!--index-->
         <div class="index">
             <div class="container">
-                <h1>Just Movies, Simply.</h1>
+                <h1>Just Data, Clearly.</h1>
             </div>
         </div>
         <!-- Movies ================================================== -->
