--- a/templates/justmovies/people.html
+++ b/templates/justmovies/people.html
@@ -46,7 +46,7 @@
         <!--index-->
         <div class="index">
             <div class="container">
-                <h1>Just Movies, Simply.</h1>
+                <h1>Just People, Plainly.</h1>
             </div>
         </div>
         <!-- Movies ================================================== -->
