--- a/templates/justmovies/data.html
+++ b/templates/justmovies/data.html
@@ -112,6 +112,38 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel-body">
+                    {{ general }}
+                    <hr>
+                    {{ countDistByGenre }}
+                    <hr>
+                    {{ budgetDistByGenre }}
+                    <hr>
+                    {{ countDistByLanguage }}
+                    <hr>
+                    {{ budgetDistByLanguage }}
+                    <hr>
+                    {{ celebrityRoleDistribution }}
+                    <hr>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <canvas id="countDistByGenre" width="400" height="450"></canvas>
+                        </div>
+                        <div class="col-md-4">
+                            <canvas id="countDistByCountry" width="400" height="400"></canvas>
+                        </div>
+                        <div class="col-md-4">
+                            <canvas id="countDistByLanguage" width="400" height="400"></canvas>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <canvas id="myChart" width="400" height="400"></canvas>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!--footer-->
             <div class="site-footer">
@@ -128,6 +160,96 @@
                 </div>
             </div>
         </div>
+    </div>
+    <script type="application/javascript">
+        var ctx, countDistByGenreChart, countDistByCountryChart;
+        ctx = document.getElementById("countDistByGenre").getContext('2d');
+        countDistByGenreChart = new Chart(ctx, {
+            type: 'pie',
+            data: {{ countDistByGenre | safe }},
+            options: {
+                title: {
+                    display: true,
+                    text: 'Movies by Genre'
+                },
+                legend: {
+                    display: true,
+                    position: "bottom"
+                }
+            }
+        });
+
+        ctx = document.getElementById("countDistByCountry").getContext('2d');
+        countDistByCountryChart = new Chart(ctx, {
+            type: 'pie',
+            data: {{ countDistByCountry | safe }},
+            options: {
+                title: {
+                    display: true,
+                    text: 'Movies by Country'
+                },
+                legend: {
+                    display: true,
+                    position: "bottom"
+                }
+            }
+        });
+
+        ctx = document.getElementById("countDistByLanguage").getContext('2d');
+        countDistByLanguageChart = new Chart(ctx, {
+            type: 'pie',
+            data: {{ countDistByLanguage | safe }},
+            options: {
+                title: {
+                    display: true,
+                    text: 'Movies by Language'
+                },
+                legend: {
+                    display: true,
+                    position: "bottom"
+                }
+            }
+        });
+
+
+        ctx = document.getElementById("myChart").getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+                datasets: [{
+                    label: '# of Votes',
+                    data: [12, 19, 3, 5, 2, 3],
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255,99,132,1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true
+                        }
+                    }]
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
