Added budget distribution by year.

--- a/templates/justmovies/data.html
+++ b/templates/justmovies/data.html
@@ -128,7 +128,7 @@
                             <canvas id="countDistByLanguage" width="400" height="400"></canvas>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="margin-top: 10px;">
                         <div class="col-md-4">
                             <canvas id="budgetDistByGenre" width="400" height="425"></canvas>
                         </div>
@@ -139,9 +139,9 @@
                             <canvas id="budgetDistByLanguage" width="400" height="400"></canvas>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <canvas id="myChart" width="400" height="400"></canvas>
+                    <div class="row" style="margin-top: 20px;">
+                        <div class="col-md-12">
+                            <canvas id="budgetDistByYear" width="400" height="100"></canvas>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,6 @@
         </div>
     </div>
     <script type="application/javascript">
-        var ctx, countDistByGenreChart, countDistByCountryChart;
         ctx = document.getElementById("countDistByGenre").getContext('2d');
         countDistByGenreChart = new Chart(ctx, {
             type: 'pie',
@@ -261,42 +260,18 @@
         });
 
 
-        ctx = document.getElementById("myChart").getContext('2d');
-        var myChart = new Chart(ctx, {
+        ctx = document.getElementById("budgetDistByYear").getContext('2d');
+        budgetDistByYear = new Chart(ctx, {
             type: 'bar',
-            data: {
-                labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-                datasets: [{
-                    label: '# of Votes',
-                    data: [12, 19, 3, 5, 2, 3],
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255,99,132,1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
+            data: {{ budgetDistByYear | safe }},
             options: {
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero:true
-                        }
-                    }]
-                }
-            }
+                title: {
+                    display: true,
+                    text: 'Budget by Year'
+                },
+                legend: {
+                    display: false
+                }}
         });
     </script>
 </body>
