--- a/templates/justmovies/movie_edit.html
+++ b/templates/justmovies/movie_edit.html
@@ -52,8 +52,16 @@
         <!-- Movies ================================================== -->
         <div class="container">
             <div class="panel panel-just-dashed">
-                <div class="panel-heading">
-                    <h3 class="no-margin">{{ movie.title }}</h3>
+                <div class="panel-heading clearfix">
+                    <h3 class="no-margin pull-left">{{ movie.title }}</h3>
+                    <form method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="action" value="delete">
+                        <button class="pull-right btn btn-danger" type="submit"
+                                onclick="return confirm('Are you sure you want to delete this movie?')">
+                            Delete Movie
+                        </button>
+                    </form>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal col-md-12" method="post">
@@ -201,6 +209,20 @@
                 </div>
             </div>
         </div>
+    </div>
+    <script>
+        function deleteMovie(movie_pk, movie_name) {
+            var response = confirm("Are you sure you want to delete " + movie_name + "?");
+            if (response === true) {
+                var xhr = new XMLHttpRequest();
+                xhr.open("POST", window.location.href, true);
+                xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+                xhr.send(JSON.stringify({
+                    value: value
+                }));
+            }
+        }
+    </script>
 </body>
 
 </html>
