--- a/templates/justmovies/data.html
+++ b/templates/justmovies/data.html
@@ -288,7 +288,7 @@
             options: {
                 title: {
                     display: true,
-                    text: 'Budget by Year'
+                    text: 'Average Budget by Year'
                 },
                 legend: {
                     display: false
